app.component: Use <router-outlet>.
To navigate to simple Home and About pages.

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,17 @@
   </script>
 </head>
 <body>
+  <div class="menu-panel clearfix">
+    <a class="menu-title clearfix" href="">Big-O Quiz</a>
+    <div class="menu-others-panel clearfix">
+      <a class="about-link" href="/about">About</a>
+      <div>
+        <div class="user-status-panel"></div>
+        <!-- TODO: Add an angular component -->
+      </div>
+    </div>
+  </div>
+
   <app-root></app-root>
 
   <div class="sidebar-panel-links">
