Add a placeholder UserStatusComponent in header.

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,7 @@
     <a class="menu-title clearfix" href="">Big-O Quiz</a>
     <div class="menu-others-panel clearfix">
       <a class="about-link" href="/about">About</a>
-      <div>
-        <div class="user-status-panel"></div>
-        <!-- TODO: Add an angular component -->
-      </div>
+      <user-status></user-status>
     </div>
   </div>
 
