Component selectors: Prefix with app-.
As preferred by ts-lint.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     <a class="menu-title clearfix" href="">Big-O Quiz</a>
     <div class="menu-others-panel clearfix">
       <a class="about-link" href="/about">About</a>
-      <user-status></user-status>
+      <app-user-status></app-user-status>
     </div>
   </div>
 
