UserStatus: Show logout only on the user page.
By letting the HTML pass an attribute.

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <a class="menu-title clearfix" href="">Big-O Quiz</a>
     <div class="menu-others-panel clearfix">
       <a class="about-link" href="/about">About</a>
-      <app-user-status></app-user-status>
+      <app-user-status showLogOutWhenAppropriate="false"></app-user-status>
     </div>
   </div>
 
