--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,29 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
 
   <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-  <script type="text/javascript">
-    window.cookieconsent_options = {"message":"We use cookies to personalise content and ads and to analyse our traffic, via Google Adsense and Google Analytics.","dismiss":"OK","learnMore":"Details","link":"http://www.google.com/intl/en/policies/technologies/cookies/","theme":"dark-top"};
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script>
+  window.addEventListener("load", function(){
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+	"background": "#000"
+      },
+      "button": {
+	"background": "#f1d600"
+      }
+    },
+    "position": "top",
+    "static": true,
+    "content": {
+      "message": "We use cookies to personalize content and ads and to analyse our traffic, via Google Adsense and Google Analytics",
+      "dismiss": "OK",
+      "link": "Details",
+      "href": "https://www.google.com/intl/en/policies/technologies/cookies/"
+    }
+  })});
   </script>
-
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
   <!-- End Cookie Consent plugin -->
 
   <!-- Google Analytics -->
