cookie consent: Use async and defer attributes.
To avoid delaying (blocking) the initial render.

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 
   <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-  <script>
+  <script async defer src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script defer>
   window.addEventListener("load", function(){
   window.cookieconsent.initialise({
     "palette": {
