index.html: Specify mime type for javascript script tags

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-  <script async defer src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script async defer src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js" type="text/javascript"></script>
   <script defer>
   window.addEventListener("load", function(){
   window.cookieconsent.initialise({
@@ -120,7 +120,7 @@
       </div>
     </div>
     <div>
-      <script async="async" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script async="async" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" type="text/javascript"></script>
       <!-- bigoquiz-sidebar-skyscraper -->
       <ins class="adsbygoogle" style="display:inline-block;width:300px;height:600px" data-ad-client="ca-pub-7781900730613488" data-ad-slot="7120643214"></ins>
       <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
