Component html: Add square brackets around boolean component attribute/property
To avoid these errors:

✘ [ERROR] TS2322: Type 'string' is not assignable to type 'boolean'. [plugin angular-compiler]

    src/app/user.component.html:8:30:
      8 │     <app-user-status [binary] showExtras=true></app-user-status>

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
     <a class="menu-title clearfix" href="">Big-O Quiz</a>
     <div class="menu-others-panel clearfix">
       <a class="about-link" href="/about">About</a>
-      <app-user-status showExtras="false"></app-user-status>
+      <app-user-status [showExtras]="false"></app-user-status>
     </div>
   </div>
 
